# Mindvault-backend

./: pyproject.toml  test.py  test2.py
app/: main.py
app/api/: routes.py
app/data/json_files/: sample.json
app/services/: map_generator.py
