[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Keval Shah <keval.arhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
markitdown = "^0.0.1a3"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
